--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,7 @@ float: left;
 
 h1{
 font-family: 'Open Sans', sans-serif;
-color: #fff;
+color: #000;
 text-align: center;
 font-size: 50px;
 font-weight: 300;
@@ -58,7 +58,7 @@ h2{
 	text-align: center;
 	font-weight: 300;
 	font-size: 20px;
-		color: #ffffff;
+		color: #000000;
 
 }
 
